--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 PORT=8080
-DB_URL=mongodb://127.0.0.1:27017/dobby
+DB_URL=mongodb+srv://v:123v@cluster0.xb8lvi5.mongodb.net/dobby
 CLOUD_NAME=dcz7b2we7
 CLOUD_KEY=484444324297369
 CLOUD_KEY_SECRET=cE_E-pp3Vr3bIcSgFvXM5tD0Di4
